# sinapi

./: .env.example  .gitmodules  docker-compose.yml
AutoSINAPI/: .gitignore  README.md  __init__.py  pyproject.toml  setup.py  update_requirements.py
AutoSINAPI/.github/: pull_request_template.md  release-drafter.yml
AutoSINAPI/.github/workflows/: draft-release.yml  release.yml  tests.yml
AutoSINAPI/autosinapi/: __init__.py  config.py  etl_pipeline.py  exceptions.py
AutoSINAPI/autosinapi/core/: __init__.py  database.py  downloader.py  pre_processor.py  processor.py
AutoSINAPI/docs/: CONTRIBUTING.md  DataModel.md  SPRINT_ETL_ENRICHMENT.md  SPRINT_SSOT_HARDENING.md  TUTORIAL-INICIO.md  workPlan.md
AutoSINAPI/tests/: conftest.py  test_config.py  test_file_input.py  test_pipeline.py  test_sre_hardening.py  test_traceability_etl.py
AutoSINAPI/tests/core/: test_database.py  test_downloader.py  test_processor.py
AutoSINAPI/tools/: CONFIG.example.json  sql_access.secrets.example
AutoSINAPI/tools/docker/: .env.example  Dockerfile  Makefile  docker-compose.yml
