[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autosinapi"
dynamic = ["version"]
authors = [
    {name = "Lucas Antonio M. Pereira", email = "contato@mundoaec.com"},
]
description = "Toolkit para automação do SINAPI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "requests",
    "setuptools",
    "sqlalchemy",
    "tqdm",
    "typing",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "xlsxwriter",
]

[tool.setuptools_scm]
# Habilita o uso do setuptools_scm

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["autosinapi"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]